--- a/Atividade API - 14.02/ecommerce_api/ecommerce/templates/produtos/lista_produtos.html
+++ b/Atividade API - 14.02/ecommerce_api/ecommerce/templates/produtos/lista_produtos.html
@@ -1,11 +1,11 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
-    <link rel="stylesheet" href="{% static './styles/style.css' %}">
+    <link rel="stylesheet" href='../../../static/styles/styles.css'>
 </head>
 <body>
     <h1>Produtos:</h1>
